# Glossar

./: .current_glossary  .gitignore  README.md  pyproject.toml
glossar/: cli.py  config.py  glossary.py  glossaryEntry.py  handleFunctions.py  helpFunctions.py  main.py  parser.py  pathFunctions.py
glossar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
glossaries/: RaspberryPiZeroW.json
